--- a/Pipfile
+++ b/Pipfile
@@ -8,7 +8,7 @@ verify_ssl = true
 [packages]
 django = "*"
 dj-database-url = "==0.4.2"
-psycopg2 = "*"
+psycopg2 = "==2.7.5"
 gunicorn = "*"
 whitenoise = "*"
 
